the appearance of the form

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,24 @@
-div {
-  align-items: center;
-  margin-bottom: 10px;
-  margin-left: 110px;
-  text-align: center;
+* {
+  margin: 0 auto;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+.form-title {
+  color: #30507D;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 23px;
+  margin-bottom: 38px;
 }
 
 label {
   margin-right: 15px;
-  line-height: 32px;
+  line-height: 55px;
 }
 
 .rad {
@@ -29,10 +40,52 @@ label {
 }
 
 .rad:checked {
-  border: 8px solid black;
+  border: 8px solid #3b5983;
 }
 
 input {
+  font-size: 12px;
+  line-height: 20px;
+  height: 30px;
+  width: 50%;
   border: 1px solid black;
   border-radius: 5px;
+  color:#3b5983;
 }
+
+
+.register-form-container {
+  max-width: 415px;
+  background: #FFFFFF;
+  box-shadow: 0px 6px 50px rgba(217, 229, 255, 0.7);
+  border-radius: 20px;
+  padding: 45px 30px 10px 20px;
+  margin: 0 auto;
+  align-items: center;
+  text-align: center;
+  position: relative;
+  
+}
+
+.form-field {
+  margin-bottom: 13px;
+}
+
+.button {
+  display: block;
+  height: 35px;
+  background: #247FFF;
+  border-radius: 5px;
+  color:#fff;
+  text-transform: uppercase;
+  text-align: center;
+  line-height: 35px;
+  cursor: pointer;
+  padding: 0px 10px 10px 10px;
+}
+
+.button:hover {
+  background-color: #0D6CF2;
+}
+
+
